tests/ui/statics/issue-17718-static-sync.stderr
error[E0277]: `Foo` cannot be shared between threads safely
  --> $DIR/issue-17718-static-sync.rs:9:13
   |
LL | static BAR: Foo = Foo;
   |             ^^^ `Foo` cannot be shared between threads safely
   |
help: the trait `Sync` is not implemented for `Foo`
  --> $DIR/issue-17718-static-sync.rs:5:1
   |
LL | struct Foo;
   | ^^^^^^^^^^
   = note: shared static variables must have a type that implements `Sync`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
